# mevi

./: Cargo.toml  README.md
src/: app.rs  cli.rs  event.rs  img.rs  keys.rs  log.rs  main.rs  menu.rs  screen.rs  shm.rs  state.rs  util.rs  window.rs
src/font/: loader.rs  mod.rs  render_string.rs
src/image/: mod.rs
src/img/: mod.rs
