[package]
name = "mevi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
gethostname = "0.4.1"
image = "0.24.5"
lazy_static = "1.4.0"
libc = "0.2.139"
x11rb = { version = "0.11.1", features = ["resource_manager", "cursor", "image", "shm", "libc"] }
