[package]
name = "mevi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
fontdue = "0.7.2"
gethostname = "0.4.1"
image = "0.24.5"
lazy_static = "1.4.0"
libc = "0.2.139"
smallmap = "1.4.1"
thiserror = "1.0.39"
x11rb = { version = "0.11.1", features = ["resource_manager", "cursor", "image", "shm", "libc"] }
